portico: Stop using 0.5 opacity for documentation titles.
opacity 0.5 is pretty hard to read.

--- a/static/styles/portico/portico.css
+++ b/static/styles/portico/portico.css
@@ -567,7 +567,7 @@ input.text-error {
             font-size: 1.2rem;
             font-weight: 400;
             color: hsl(0, 0%, 20%);
-            opacity: 0.5;
+            opacity: 0.7;
         }
     }
 
